@@ -849,7 +849,7 @@ BEGIN
     LTEXT           "Type a key, or press Escape to disable.",65429,53,14,125,8
 END
 
-MEMWATCH DIALOGEX 0, 0, 261, 263
+MEMWATCH DIALOGEX 0, 0, 261, 270
 STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | WS_MINIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 CAPTION "Memory Watch"
 MENU MEMWATCHMENU
@@ -937,6 +937,7 @@ BEGIN
     PUSHBUTTON      " ",MEMW_EDIT03RESET,242,241,11,7
     GROUPBOX        "Memory Change Monitoring",IDC_STATIC,131,202,129,57,BS_CENTER
     LTEXT           "Count",IDC_STATIC,217,213,20,8
+    PUSHBUTTON      "<",MEMW_EXPANDCOLLAPSE,1,259,11,10
 END
 
 DEBUGGER DIALOGEX 54, 74, 548, 305
@@ -1503,7 +1504,7 @@ BEGIN
     "MEMWATCH", DIALOG
     BEGIN
         RIGHTMARGIN, 260
-        BOTTOMMARGIN, 262
+        BOTTOMMARGIN, 269
     END
 
     "DEBUGGER", DIALOG
